# Laboratory_17

./: CMakeLists.txt  main.c
libs/string/tasks/: string.c  string.h
libs/string/test_for_tasks/: test_for_tasks.c  test_for_tasks.h
